pentru jenkins