@@ -142,7 +142,7 @@ public class DrinkShopController {
             alert.showAndWait();
             return;
         }else
-        if (productService.getAllProducts().stream().filter(p->p.getId()==r.getId()).toList().size()>0) {
+        if (productService.getAllProducts().stream().filter(p->p.getId()==r.getId()).collect(Collectors.toList()).size()>0) {
             Alert alert = new Alert(Alert.AlertType.WARNING);
             alert.setTitle("Error");
             alert.setHeaderText("Exista un produs cu reteta adaugata.");
